fix clippath responsiveness

--- a/src/styles/presentation.module.css
+++ b/src/styles/presentation.module.css
@@ -1,10 +1,6 @@
-.polygon {
-    height: 460px;
-    clip-path: polygon(0 0, 100% 0, 100% 430px, 80% 460px, 40% 400px, 0% 460px);
-}
-
-.presentation {
-    @apply polygon flex flex-col justify-center relative;
+.clip-path {
+    padding-bottom: calc(60px + 4rem);
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 30px), 80% 100%, 40% calc(100% - 60px), 0% 100%);
     background-image: linear-gradient(150deg, black 70%, #b91c1c);
 }
 
